added with and a short discussion of randomness

--- a/python_files.ipynb
+++ b/python_files.ipynb
@@ -258,6 +258,47 @@
     "    # add each word to the result\n",
     "    for word in line.split() :\n",
     "        result.append(word)\n",
+    "my_data_file.close()\n",
+    "    \n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Using with\n",
+    "If you are going to read or write your file all at once, there is a convenient way to do so \n",
+    "```python\n",
+    "    with open(file_name) as file_reference :\n",
+    "        #code to process the file\n",
+    "```\n",
+    "The big advantage is that once you leave the with block, the file is guaranteed to be closed.  This will happen even if an error occurs."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['hay', 'hey', 'go', 'chess', 'checkers', 'the', 'previous', 'line', 'used', 'tabs', 'that', 'was', 'an', 'empty', 'line', 'a', 'e', 'i', 'o', 'u', 'y', '10', '20', '30', 'still', 'strings']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# The result is going to be a list of words \n",
+    "# Start it empty\n",
+    "result = []\n",
+    "\n",
+    "with open(\"words.txt\", \"r\") as my_data_file :\n",
+    "    for line in my_data_file :\n",
+    "        # add each word to the result\n",
+    "        for word in line.split() :\n",
+    "            result.append(word)\n",
     "    \n",
     "print(result)"
    ]
