Added treating file as a module, Linear algebra and numpy are done

--- a/python_modules.ipynb
+++ b/python_modules.ipynb
@@ -1140,6 +1140,67 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Creating your own module\n",
+    "While there is more to it, a simple way that you can create a module is to create a python file with your function definitions and then import it.  Suppose that you created a file `mywork.py` with the following contents.\n",
+    "```python\n",
+    "#!/usr/bin/env python3\n",
+    "# -*- coding: utf-8 -*-\n",
+    "\"\"\"\n",
+    "Created on Tue Dec 18 13:53:48 2018\n",
+    "\n",
+    "@author: ios\n",
+    "\"\"\"\n",
+    "\n",
+    "from random import randrange\n",
+    "def random_choice(first, second) :\n",
+    "    choice = randrange(0,2)\n",
+    "    if choice == 0 : return first\n",
+    "    else : return second\n",
+    "    \n",
+    "def heads_or_tails(count):\n",
+    "    result = []\n",
+    "    for i in range(count):\n",
+    "        result.append(random_choice(\"H\",\"T\"))\n",
+    "    return result\n",
+    "\n",
+    "# Only execute if we are the top level\n",
+    "if __name__ == \"__main__\":\n",
+    "    print(heads_or_tails(10))\n",
+    "```\n",
+    "You can import the file and then use the functions defined within. _Note:_  This module has code that will only be executed if the file is being run as script.  It will not be executed on import.  \n",
+    "\n",
+    "Lets use mywork."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100\n",
+      "['T', 'T', 'T', 'H', 'H']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import mywork\n",
+    "\n",
+    "# and now we can use the its functions\n",
+    "print(mywork.random_choice(100, 500))\n",
+    "\n",
+    "# or get the functions so you can use with out the prefix\n",
+    "from mywork import heads_or_tails\n",
+    "print( heads_or_tails(5))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Some Modules you might want to check out\n",
     "1. Scrapy - A webscraping library\n",
     "1. BeautifulSoup - XML and HTML parsing\n",
