Finish regex notes

--- a/python_re.ipynb
+++ b/python_re.ipynb
@@ -213,11 +213,176 @@
     "\n",
     "The other special characters have meaning; some are simple enough to warrant an easy definition, and others we will probably not use:\n",
     "\n",
-    "* `.` match literally any character\n",
+    "* `.` match literally any character (except newline)\n",
     "* `?` match zero or one of the previous pattern (also used for other black magic we will not talk about\n",
     "* `()` Group the enclosed patterns (allows repetition of multiple patterns or other interesting things)\n",
-    "* "
+    "* `|` In a group; let the group match either side (an \"or\")\n",
+    "* `\\` Escape the next character (if you want to match a special character, for instance\n",
+    "* `^` When not in a character class (`[]`), match the beginning of a line/string\n",
+    "* `$` Match the end of the string/line\n",
+    "\n",
+    "## A note on \"compiling\" regular expressions\n",
+    "\n",
+    "Regular expressions are not necessarily fast in Python.  However, there is a utility that allows you to speed up the process (and simplify the function/method calls).\n",
+    "\n",
+    "Python allows you to compile a regular expression.  This creates a regular expression object that has the same methods as the `re` module."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<_sre.SRE_Match object; span=(0, 7), match='s123543'>\n",
+      "<_sre.SRE_Match object; span=(0, 7), match='s123543'>\n",
+      "RACE!\n",
+      "No compilation: 0.7165242050000415 s/million\n",
+      "No compilation: 0.2593930860000455 s/million\n"
+     ]
+    }
+   ],
+   "source": [
+    "from re import search, match, compile\n",
+    "\n",
+    "\n",
+    "\n",
+    "snum_regex = '[sS][0-9]{6}'\n",
+    "snum_re = compile(snum_regex)\n",
+    "\n",
+    "print(search(snum_regex, 's123543'))\n",
+    "print(snum_re.search('s123543'))\n",
+    "\n",
+    "print(\"RACE!\")\n",
+    "from timeit import timeit\n",
+    "print('No compilation:', timeit(\"search(snum_regex, 's123543')\", \"from re import search; snum_regex = '[sS][0-9]{6}'\"), 's/million')\n",
+    "print('No compilation:', timeit(\"snum_re.search('s123543')\", \"from re import search, compile; snum_regex = '[sS][0-9]{6}';snum_re = compile(snum_regex)\"), 's/million')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If you are only using a regular expression occasionally, it may not be worth compiling the regular expression.  One more benefit is that it allows you to associate a regular expression with a name, so your use of regular expressions is clearer in your source code.\n",
+    "\n",
+    "## Character Classes\n",
+    "\n",
+    "Python has defined some special character classes you can use:\n",
+    "\n",
+    "* `\\d`: any decimal digit (equivalent to `[0-9]`)\n",
+    "* `\\D`: any non-digit character (equivalent to `[^0-9]`)\n",
+    "* `\\s`: any whitespace character (equivalent to `[ \\t\\n\\r\\f\\v]`)\n",
+    "* `\\S`: any non-whitespace character (equivalent to `[^ \\t\\n\\r\\f\\v]`)\n",
+    "* `\\w`: any alphanumeric character (equivalent to `[a-zA-Z0-9_]`)\n",
+    "* `\\w`: any non-alphanumeric character (equivalent to `[^a-zA-Z0-9_]`)\n",
+    "\n",
+    "When using these in regular expressions, we should indicate that our string is a a \"raw string\" by putting an `r` before the first quote.  This tells python to not interpret escaped characters.  While not an issue for now, eventually a non-raw string that contains, say, `\\w` (which is not a valid python escape sequence) will throw a syntax error.\n",
+    "\n",
+    "Any of these characters can be used in our \"custom\" character classes (inside `[]`).  We can, for example, rewrite our previous regular expressions as:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<_sre.SRE_Match object; span=(0, 7), match='s123456'>\n",
+      "None\n",
+      "<_sre.SRE_Match object; span=(0, 5), match='_asdf'>\n",
+      "<_sre.SRE_Match object; span=(0, 6), match='___2ad'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "\n",
+    "# Note the r before the quotes; this tells python it is a raw string\n",
+    "snum_re = re.compile(r'[sS]\\d{6}')\n",
+    "ident_re = re.compile(r'[a-zA-Z_]\\w*')\n",
+    "# An alternate way to do this by putting the \"not\" matching in the middle\n",
+    "# [\\w^\\d] means any alphanumeric character EXCEPT digis\n",
+    "ident_re_alt = re.compile(r'[\\w^\\d]\\w*')\n",
+    "\n",
+    "print(snum_re.search('s123456'))\n",
+    "print(snum_re.search('nathane'))\n",
+    "print(ident_re.search('_asdf'))\n",
+    "print(ident_re_alt.search('___2ad'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Other useful `re` functionality\n",
+    "\n",
+    "So far we have seen `match` (which determines if the regular expression matches at the beginning of the string) and `search`.  \n",
+    "\n",
+    "These methods return a `Group` object that contains information about the matching portion of the string.  This object contains the following methods:\n",
+    "\n",
+    "* `group()`: returns the string that match (useful when you are using patterns)\n",
+    "* `start()`: returns the starting index of the matched group\n",
+    "* `end()`: returns the ending index of the matched group\n",
+    "* `span()`: returns (start(), end()) as a tuple\n",
+    "\n",
+    "Other helpful methods include `findall` and `finditer`, which return a list and an iterator of _all_ matching substrings in the string (where `match` and `search` only find one).\n",
+    "\n",
+    "## Find/Replace\n",
+    "\n",
+    "One _incredibly_ useful application of regular expressions is performign a find/replace operation (we will often use this to clean data and replace unhelpful/invalid characters (often whitespace).  The `sub(repl, string, count=0, flags=0)` method allows us to do pattern based find/replace.  Consider the following way to replace ALL whitespace in a string with underscores:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Space_is_limited_In_a_haiku,_so_it's_hard_To_finish_what_you\n",
+      "Space_is_limited_In_a_haiku,_so_it's_hard_To_finish_what_you\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "\n",
+    "ws = re.compile(r'\\s')\n",
+    "\n",
+    "# Multiline strings are fun!\n",
+    "# from \n",
+    "text = '''Space is limited\n",
+    "In a haiku, so it's hard\n",
+    "To finish what you'''\n",
+    "\n",
+    "print(ws.sub('_', text))\n",
+    "\n",
+    "# alternately, we can use re.sub, remember that the pattern objects have the same\n",
+    "# methods as the module has functions\n",
+    "print(re.sub(r'\\s', '_', text))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There are MANY other things you can do with regular expressions, but this is hopefully a good introduction.  You can always get more information in the \"gentle\" introduction (https://docs.python.org/3.7/howto/regex.html#regex-howto) as well as much more rigorous documentation in the official regex docs (https://docs.python.org/3.7/library/re.html)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
