Finish citing source for data in re example

--- a/python_re.ipynb
+++ b/python_re.ipynb
@@ -358,7 +358,7 @@
     "ws = re.compile(r'\\s')\n",
     "\n",
     "# Multiline strings are fun!\n",
-    "# from \n",
+    "# from https://www.reddit.com/r/Jokes/comments/1bkzx7/my_favourite_haiku/\n",
     "text = '''Space is limited\n",
     "In a haiku, so it's hard\n",
     "To finish what you'''\n",
