Fix feedback in basic data structures notes

--- a/python_basic_structures.ipynb
+++ b/python_basic_structures.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -47,9 +47,11 @@
    ],
    "source": [
     "my_list = [1, 3, 5, 7]\n",
+    "# lists are zero indexed, and can be accessed like you would in most other languages\n",
     "print(my_list[2])\n",
     "print(my_list[1])\n",
     "print(my_list)\n",
+    "# List access and mutation use the same operator\n",
     "my_list[0] = 2\n",
     "print(my_list)\n",
     "print(my_list[-1])"
@@ -64,24 +66,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "28\n"
-     ]
-    }
-   ],
-   "source": [
-    "my_other_list = [ 1, 4, 5, 8, 10]\n",
-    "sum = 0\n",
-    "for i in my_other_list :\n",
-    "    sum += i\n",
-    "print(sum)"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -89,11 +77,13 @@
    "source": [
     "### Selected list methods and functions\n",
     "\n",
-    "For each of these, assume my_list is a Python list\n",
+    "For each of these, assume my_list is a Python list.  Note that a parameter in square brackets `[]` means that it is optional, _not_ that you should put the parameter in brackets\n",
     "\n",
     "* `len(my_list)`: returns the number of elements in the list\n",
     "* `my_list.append(e)`: adds the element to the end of the list\n",
     "* `my_list.extend(another_list)`: appends all elements in `another_list` to the end of `my_list`\n",
+    "* `my_list.remove(e)`: remove the first item from the list whose value is x.  Errors if x is not in the list\n",
+    "* `my_list.pop([i])`: Removes the item at index `i` and return it.  If `i` is not specified, then remove and return the last element.\n",
     "\n",
     "and so many more!  Check out https://docs.python.org/3/tutorial/datastructures.html#more-on-lists to see a more complete list.\n",
     "\n",
@@ -102,7 +92,8 @@
     "* Print the length of `list1`\n",
     "* Add a string to the end of `list2`\n",
     "* Print the length of `list2`\n",
-    "* Add all elements in `list2` to the end of `list1`\n"
+    "* Add all elements in `list2` to the end of `list1`\n",
+    "* Remove an element from one of the lists and print it\n"
    ]
   },
   {
@@ -160,13 +151,68 @@
     "    print(v)\n",
     "\n",
     "for v in list1:\n",
-    "    print('---', str(2*v))"
+    "    print('---', 2*v)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "It is interesting that when you iterate through the list, you cannot change the list through the variable, that is:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "list1 = [1, 2, 3, 4]\n",
+    "for v in list1:\n",
+    "    v *= 2\n",
+    "print(list1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If you want to modify elements of the list in the loop, you must use the index of the list."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 4, 6, 8]\n"
+     ]
+    }
+   ],
+   "source": [
+    "list1 = [1, 2, 3, 4]\n",
+    "for i in range(len(list1)):\n",
+    "    list1[i] *= 2\n",
+    "print(list1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note that `range` does not return a list, but instead an object that behaves very similarly to a list.  If necessary you can convert a `range` to a `list` using the `list` constructor: `list(range(5))` returns the list `[0, 1, 2, 3, 4]`\n",
     "**Try it!** Perform the sum exercise above (create a list with many numbers, and calculate the sum) but use a for loop (if you had not before)"
    ]
   },
@@ -210,6 +256,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Sorting lists\n",
+    "\n",
+    "Python has a built in implementation of Timsort that can be used on lists of any objects that are directly comparable.  There are two ways to invoke the built in sort on the list `l`:\n",
+    "\n",
+    "* `sorted(l)` returns a sorted list containing the same data as `l`.  The original list is unchanged\n",
+    "* `l.sort()` sorts `l` in place and does not return anything\n",
+    "\n",
+    "Both of these functions accept a `key` parameter that allow you to specify what part of a list of complex objects should be used for sorting.  See https://docs.python.org/3/howto/sorting.html#key-functions for more information.  We will discuss lambda expressions in a later tutorial.\n",
+    "\n",
+    "**Try it!** Create a list and sort it.  Print both the unsorted list and the sorted list."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### List Slicing\n",
     "\n",
     "Python lists have an incredibly powerful and flexible indexing mechanism that allows you to **slice** them (and get views of your data).  A python slice takes the form:\n",
@@ -217,7 +286,7 @@
     "```python\n",
     "my_list[start:stop:stride] \n",
     "# gets the list from index start (inclusive) to \n",
-    "# stop(exclusive), and add stride to the current index\n",
+    "# stop(exclusive), adding stride to the current index\n",
     "# every time\n",
     "```\n",
     "\n",
@@ -267,11 +336,108 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Tuple\n",
+    "\n",
+    "Tuples are similar to lists, but they have one important feature: they are _immutable_, which means they are _hashable_.  Tuples are created and used similarly to lists, but using parenthesis instead of square brackets.  Their indexing operations remain the same."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 2, 3)\n",
+      "(1, 3)\n",
+      "{(1, 2, 3): 'this is nifty!'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_tuple = (1, 2, 3)\n",
+    "print(my_tuple)\n",
+    "print(my_tuple[::2])\n",
+    "my_dict = dict()\n",
+    "# you cannot do this with a list!\n",
+    "my_dict[my_tuple] = 'this is nifty!'\n",
+    "print(my_dict)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Because tuples are directly supported by Python, they can be used to return multiple values from functions:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 2, 3)\n",
+      "1 - 2 - 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "def foo():\n",
+    "    return 1, 2, 3\n",
+    "\n",
+    "print(foo())\n",
+    "# we can directly unpack the return tuples into variables\n",
+    "a, b, c = foo()\n",
+    "print(a, '-', b, '-', c)\n",
+    "# Cannot unpack fewer or more values than specified, expecting 2, getting 3 from foo\n",
+    "# _,c2 = foo()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can also exploit this unpacking behavior of tuples to perform a one liner swap function, which is just really cool:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 2\n",
+      "2 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 3\n",
+    "b = 2\n",
+    "print(a, b)\n",
+    "# swap is a oneliner!\n",
+    "a, b = b, a\n",
+    "print(a, b)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Dictionary\n",
     "\n",
-    "Dictionaries (or `dict`s) are the Python implementation of the `HashMap`; that is they store key/value pairs, allow searching based on keys, and are generally downright awesome.  Keys and values do not need to be the same (or consistent) types.  However keys must be _hashable_ (specifically, the objects that are the keys must have the `__hash__()` and `__eq__()` methods defined, though that is an implementation detail we don't necessarily need).  The fact that it is an implementation of a `HashMap` means that it has the following characteristics:\n",
+    "Dictionaries (or `dict`s) are the Python equivalent of Java's `HashMap`; that is they store key/value pairs, allow searching based on keys, and are generally downright awesome.  Keys and values do not need to be the same (or consistent) types.  However keys must be _hashable_ (specifically, the objects that are the keys must have the `__hash__()` and `__eq__()` methods defined, though that is an implementation detail we don't necessarily need).  The fact that it is an implementation of a `HashMap` means that it has the following characteristics:\n",
     "\n",
-    "| Get/Set | Search (for key) | Add | Remove| \n",
+    "| Get/Set | Search (for key in dict) | Add | Remove| \n",
     "| :---: | :---: | :---: | :---: |\n",
     "| O(1) | O(1) | O(1) | O(1) |\n",
     "\n",
@@ -338,7 +504,7 @@
     "* `my_dict.keys()`: Returns a view of the dictionary's keys\n",
     "* `my_dict.values()`: Returns a view of the dictionary's values\n",
     "* `my_dict.get(key[,default])`: Returns the value associated with the key.  If you specify the optional `default`, will return that if the key does not exist in the dictionary; otherwise if the key does not exist in the dictionary it will raise a `KeyError`\n",
-    "\n",
+    "* `my_dict.items()` returns an iterable containing tuples representing (key, value) pairs.\n",
     "Check out https://docs.python.org/3/library/stdtypes.html#typesmapping for a more complete list.\n",
     "\n",
     "### Iteration through dictionaries\n",
@@ -348,13 +514,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "name bob\n",
+      "age 33\n",
+      "1 asdf\n",
+      "--another way!\n",
       "name bob\n",
       "age 33\n",
       "1 asdf\n"
@@ -364,57 +534,26 @@
    "source": [
     "my_dict = {'name': 'bob', 'age': 33, 1: 'asdf'}\n",
     "for key in my_dict:\n",
-    "    print(key, my_dict[key])"
+    "    print(key, my_dict[key])\n",
+    "print ('--another way!')\n",
+    "for key, value in my_dict.items():\n",
+    "    print(key, value)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Tuple\n",
+    "## Sets\n",
     "\n",
-    "Tuples are similar to lists, but they have one important feature: they are _immutable_, which means they are _hashable_.  Tuples are created and used similarly to lists, but using parenthesis instead of square brackets.  Their indexing operations remain the same."
+    "Python sets implementations of Java's `HashSet`, so they can only store elements that are hashable.  See https://docs.python.org/3/library/stdtypes.html#set-types-set-frozenset for more information on sets.\n",
+    "\n",
+    "Note that sets are mutable, and as such are not hashable; if you want to use a `set` as a key in a dictionary (or have a set of sets) you should use the immutable and hashable `frozenset` class that Python provides for you."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(1, 2, 3)\n",
-      "(1, 3)\n",
-      "{(1, 2, 3): 'this is nifty!'}\n"
-     ]
-    }
-   ],
-   "source": [
-    "my_tuple = (1, 2, 3)\n",
-    "print(my_tuple)\n",
-    "print(my_tuple[::2])\n",
-    "my_dict = dict()\n",
-    "# you cannot do this with a list!\n",
-    "my_dict[my_tuple] = 'this is nifty!'\n",
-    "print(my_dict)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Sets for fun\n",
-    "\n",
-    "Python sets, while cool, may not be used in these courses very much.  They are implementations of the `HashSet`, so they can only store elements that are hashable.  See https://docs.python.org/3/library/stdtypes.html#set-types-set-frozenset for more information on sets.\n",
-    "\n",
-    "Note that sets are mutable, and as such are not implicitly hashable; if you want to use a `set` as a key in a dictionary (or have a set of sets) you should use the immutable and hashable `frozenset` class that Python provides for you."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -422,14 +561,76 @@
      "output_type": "stream",
      "text": [
       "True\n",
-      "False\n"
+      "False\n",
+      "True\n"
      ]
     }
    ],
    "source": [
     "my_set = set([1, 2, 3, 4, 5])\n",
     "print(5 in my_set)\n",
-    "print(10 in my_set)"
+    "print(10 in my_set)\n",
+    "print(10 not in my_set)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Set Operations\n",
+    "\n",
+    "Python sets directly support the standard mathematical set operations, including:\n",
+    "\n",
+    "* Subset (`a<=b`) and Proper Subset (`a<b`): return `True` if every element in `a` is in `b`.  Proper Subset also checks to see that `a!=b`\n",
+    "* Super set (`a>=b`) and Proper Superset (`a>b`): same as `b<=a` and `b<a` respectively\n",
+    "* Union (`a|b`): Returns a set containing all elements in `a` and `b`\n",
+    "* Difference (`a-b`): Returns a set containing all elements in `a` that are not in `b`\n",
+    "* Symmetric Difference (`a^b`): Returns a set containing all elements in `a` or `b` that are not in both\n",
+    "* Intersection (`a&b`): Returns a set of all elements that are in both `a` and `b`\n",
+    "\n",
+    "Additionally, `set` objects support in place modification of the calling side using operators: `|=, -=, ^=, %=`.\n",
+    "\n",
+    "There are member method names for each of these functions as well (see the documentation for more information).\n",
+    "\n",
+    "It can be helpful to see the set operations is a venn diagram (`a|b`) is the all elements `a` and `b` including the overlap.  \n",
+    "\n",
+    "![Set Operations](imgs/setops.png)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0, 1, 2, 3, 4} {2, 3, 4, 5, 6}\n",
+      "Proper Subset False\n",
+      "Union {0, 1, 2, 3, 4, 5, 6}\n",
+      "Difference {0, 1}\n",
+      "Symmetric Difference {0, 1, 5, 6}\n",
+      "Intersection {2, 3, 4}\n"
+     ]
+    }
+   ],
+   "source": [
+    "seta = set(range(5))\n",
+    "setb = set(range(2,7))\n",
+    "print(seta, setb)\n",
+    "print ('Proper Subset', seta < setb)\n",
+    "print ('Union', seta | setb)\n",
+    "print ('Difference', seta - setb)\n",
+    "print ('Symmetric Difference', seta ^ setb)\n",
+    "print ('Intersection', seta & setb)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Python data structures tutorial:** https://docs.python.org/3/tutorial/datastructures.html"
    ]
   }
  ],
@@ -449,7 +650,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
