Re-add decorators blurb

--- a/python_advanced.ipynb
+++ b/python_advanced.ipynb
@@ -196,11 +196,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Remember that the thing that our variable can be `in` is any iterable, so we can do some interesting things involving other data types like the `set` or the `dict`.  Some of the example code will use list comprehensions to perform transformations and filters on data.  A good way to think of a List Comprehension is a syntactically non-nasty `map` and `filter`.  Keep in mind that our function can be the identity function, that is:\n",
+    "Remember that `range` is not the only iterable we can us (it can be _any_ iterable), so we can do some interesting things involving other data types like the `set` or the `dict`.  Some of the example code will use list comprehensions to perform transformations and filters on data.  A good way to think of a List Comprehension is a syntactically non-nasty `map` and `filter`.  Keep in mind that our function can be the identity function, that is:\n",
     "\n",
     "```python\n",
     "[x for x in range(1, 11) if x%3 == 0] # gives a list of all integers between 1 and 10 that are evenly divisible by zero\n",
     "```\n",
+    "\n",
+    "Additionally list comprehensions are _not_ lazy, which means they will evaluate the entire list at once.  If you need/want to do a lazy operation use the `map` and `filter` operations instead of a list comprehension.\n",
     "\n",
     "#### Try It!\n",
     "Write a list comprehension that contains the string representation of the numbers from 1 to 20 if the string representation of the number contains a '1' or a '5'"
@@ -219,7 +221,7 @@
    "source": [
     "### Set Comprehensions\n",
     "\n",
-    "You can create Python `set`s using similar notation, with a `{}` instead of a `[]`\n"
+    "You can create a Python `set` using similar notation, with a `{}` instead of a `[]`.  Just as list comprehensions, set comprehensions are not lazy.\n"
    ]
   },
   {
@@ -274,25 +276,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Decorators"
+    "## Decorators\n",
+    "\n",
+    "Decorators are a CoolThing(tm) you can do (similar to an annotation in Java) that allows you to do additional things with functions.  They are (sadly) outside the scope of this class, but are frequently very useful (if you want to perform memozation).  They allow you to pass the decorated function as an argument to another function to perform additional tasks when a function is called.  Metaprogramming is cool!  Some resources:\n",
+    "\n",
+    "* https://www.thecodeship.com/patterns/guide-to-python-function-decorators/\n",
+    "* http://book.pythontips.com/en/latest/decorators.html"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -311,7 +304,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
