--- a/python_basic_structures.ipynb
+++ b/python_basic_structures.ipynb
@@ -433,6 +433,55 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### _A Handy Trick\n",
+    "Suppose that you have two related lists of the same size and you want to iterate over pairs of values from both lists.  You could loop over an index and get each of values that you need, or you could do a more pythonish thing.  Use the `zip` function.  The zip function takes two lists and creates a new list of tuples created in a pairwise fashion.  For example, if I have lists [1, 3, 5] and ['a', 'b', 'c'] zip would produce [(1,'a'), (3, 'b'), (5, 'c')]. Now you con iterate over the pairs in the list or even pull out the pieces of the pair.\n",
+    "\n",
+    "If the lists are of uneven lengths, tuples are created until the shortest list is exhausted."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 'a')\n",
+      "(3, 'b')\n",
+      "(5, 'c')\n",
+      "1 a\n",
+      "3 b\n",
+      "5 c\n",
+      "(1, 'a', 'a')\n",
+      "(3, 'b', 'b')\n",
+      "(5, 'c', 'c')\n"
+     ]
+    }
+   ],
+   "source": [
+    "list1 = [1, 3, 5]\n",
+    "list2 = ['a', 'b', 'c']\n",
+    "\n",
+    "# process each pair\n",
+    "for pair in zip(list1, list2) :\n",
+    "    print(pair)\n",
+    "    \n",
+    "# deconstruct the pairs\n",
+    "for first,second in zip(list1, list2) :\n",
+    "    print(first, second)\n",
+    "    \n",
+    "# Make a list of triples\n",
+    "for triple in zip(list1, list2, list2) :\n",
+    "    print(triple)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Dictionary\n",
     "\n",
     "Dictionaries (or `dict`s) are the Python equivalent of Java's `HashMap`; that is they store key/value pairs, allow searching based on keys, and are generally downright awesome.  Keys and values do not need to be the same (or consistent) types.  However keys must be _hashable_ (specifically, the objects that are the keys must have the `__hash__()` and `__eq__()` methods defined, though that is an implementation detail we don't necessarily need).  The fact that it is an implementation of a `HashMap` means that it has the following characteristics:\n",
@@ -650,7 +699,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
