Write warning about optional arguments

--- a/matplotlib.ipynb
+++ b/matplotlib.ipynb
@@ -22,7 +22,7 @@
     "plot([x], y, [fmt], data=None, **kwargs)\n",
     "```\n",
     "\n",
-    "See https://matplotlib.org/api/_as_gen/matplotlib.pyplot.plot.html#matplotlib.pyplot.plot for a LOT more information\n",
+    "See https://matplotlib.org/api/_as_gen/matplotlib.pyplot.plot.html#matplotlib.pyplot.plot for a LOT more information. Note that the `[]` around the parameters in the above function prototype indicates an optional argument.\n",
     "\n",
     "Note that the x data series is _optional_; if not provided it will default to the index of the element in the y array."
    ]
@@ -191,7 +191,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
