Fix failed formatting

--- a/python_basic_structures.ipynb
+++ b/python_basic_structures.ipynb
@@ -433,7 +433,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### _A Handy Trick\n",
+    "### _A Handy Trick_\n",
     "Suppose that you have two related lists of the same size and you want to iterate over pairs of values from both lists.  You could loop over an index and get each of values that you need, or you could do a more pythonish thing.  Use the `zip` function.  The zip function takes two lists and creates a new list of tuples created in a pairwise fashion.  For example, if I have lists [1, 3, 5] and ['a', 'b', 'c'] zip would produce [(1,'a'), (3, 'b'), (5, 'c')]. Now you con iterate over the pairs in the list or even pull out the pieces of the pair.\n",
     "\n",
     "If the lists are of uneven lengths, tuples are created until the shortest list is exhausted."
